--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           alt="Логотип проекта"
         />
       </a>
-      <address class="address address_right">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
@@ -116,11 +116,9 @@
       </section>
     </main>
     <footer class="content-section footer">
-      <address class="address address_left">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
